log/2022-03-09T22:28:27+08:00.log
[33m[01m[05m[ You are changing the branch: lab0 ][0m
Autotest: Begin at Wed Mar  9 22:28:27 CST 2022
[33m[01m[ (1)Start to test exercise0.1(4) ][0m
[32m[ You have passed exercise0.1(4) ][0m
[33m[01m[ (2)Start to test exercise0.1(3) ][0m
[32m[ You have passed bash exercise0.1(3) 1/2 ][0m
[32m[ You have passed bash exercise0.1(3) 2/2 ][0m
[33m[01m[ (3)Start to test exercise0.1(2) ][0m
gcc palindrome.c -o palindrome
palindrome.c: In function 'main':
palindrome.c:13:2: error: 'for' loop initial declarations are only allowed in C99 or C11 mode
  for (int i = 0,j = l - 1;i < j;++i,--j) {
  ^
palindrome.c:13:2: note: use option -std=c99, -std=gnu99, -std=c11 or -std=gnu11 to compile your code
make: *** [build] Error 1
Makefile:2: recipe for target 'build' failed
[31m[01m[ Can not find your palindrome, something wrong in your Makfeile.You have not passed exercise0.1(2) ][0m
[33m[01m[ You got 23 (of 100) this time. Wed Mar  9 22:28:30 CST 2022 ][0m
Autotest: End at Wed Mar  9 22:28:30 CST 2022
